--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,9 @@ env:
 jobs:
   test:
     env:
-      MONGODB_CLUSTER_ADDRESS: cluster
-      MONGODB_USERNAME: test
-      MONGODB_PASSWORD: 12345678
+      MONGODB_CLUSTER_ADDRESS: cluster0.rspvt.mongodb.net
+      MONGODB_USERNAME: kamal
+      MONGODB_PASSWORD: A514DULWXG19stAN
       PORT: 8080
     runs-on: ubuntu-latest
     steps:
@@ -24,8 +24,8 @@ jobs:
           key: npm-deps-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
-      # - name: Run server
-      #   run: npm start & npx wait-on http://127.0.0.1:$PORT
+      - name: Run server
+        run: npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
         run: npm test
       - name: Output information
